# C-code-example-university

Confronto stringa/: CMakeLists.txt  main.c
Fattoriale non ricorsivo/: CMakeLists.txt  main.c
Fattoriale ricorsivo/: CMakeLists.txt  main.c
Fibonaacci ricorsivo in coda/: CMakeLists.txt  main.c
Fibonacci non ricorsivo/: CMakeLists.txt  main.c
Fibonacci ricorsiva cattivo/: CMakeLists.txt  main.c
Fibonatti ricorsivo cattivo tempo/: CMakeLists.txt  main.c
Hello world/: CMakeLists.txt  main.c
MergeSort/: CMakeLists.txt
Potenza e multiplo/: CMakeLists.txt  main.c
Restituire ascii/: CMakeLists.txt  main.cpp
Ricerca binaria/: CMakeLists.txt  main.c
Somma/: CMakeLists.txt  main.c
Stampa numeri/: CMakeLists.txt  main.c
Stampa numeri 2/: CMakeLists.txt  main.c
Stampa voti/: CMakeLists.txt  main.c
Stampare stringa maiuscola/: CMakeLists.txt  main.c
Struct Ace of spades/: CMakeLists.txt  main.c
Struct mescolare e distribuire carte/: CMakeLists.txt  main.c
