cmake_minimum_required(VERSION 3.9)
project(Struct_Ace_of_spades)

set(CMAKE_CXX_STANDARD 11)

add_executable(Struct_Ace_of_spades
        .idea/codeStyles/Project.xml
        .idea/.name
        .idea/misc.xml
        .idea/modules.xml
        ".idea/puntatore ed array.iml"
        .idea/workspace.xml
        cmake-build-debug/cmake_install.cmake
        cmake-build-debug/CMakeCache.txt
        cmake-build-debug/Makefile
        cmake-build-debug/puntatore_ed_array.cbp
        main.c)
